force-app/main/default/objects/abd_License_Application__c/abd_License_Application__c.object-meta.xml
<CustomObject>
    <description>Junction object of License &amp; Application records</description>
    <label>License-Application</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License-Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>