force-app/main/default/objects/abd_License_Application__c/fields/abd_App_Denied__c.field-meta.xml
<CustomField>
    <fullName>abd_App_Denied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>App_Denied</label>
    <type>Checkbox</type>
</CustomField>