force-app/main/default/objects/abd_License_Application__c/fields/abd_App_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_App_Expire_Date__c</fullName>
    <formula>abd_Application__r.abd_Effective_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>App Expire Date</label>
    <type>Date</type>
</CustomField>