force-app/main/default/objects/abd_License_Application__c/fields/abd_App_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_App_Start_Date__c</fullName>
    <formula>abd_Application__r.abd_Effective_Date__c</formula>
    <label>App Start Date</label>
    <type>Date</type>
</CustomField>