force-app/main/default/objects/abd_License_Application__c/fields/abd_App_Type__c.field-meta.xml
<CustomField>
    <fullName>abd_App_Type__c</fullName>
    <formula>text( abd_Application__r.abd_Application_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>App Type</label>
    <type>Text</type>
</CustomField>