force-app/main/default/objects/abd_License_Application__c/fields/abd_Application__c.field-meta.xml
<CustomField>
    <fullName>abd_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>MUSW__Application2__c</referenceTo>
    <relationshipLabel>License-Applications</relationshipLabel>
    <relationshipName>License_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>