force-app/main/default/objects/abd_License_Application__c/fields/abd_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>abd_Application_Status__c</fullName>
    <description>This field is used by the DRE to update the child table and cascade the rule that will generate questions, submissions, fees.</description>
    <label>Application Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>