force-app/main/default/objects/abd_License_Application__c/fields/abd_Exclude_From_Fee__c.field-meta.xml
<CustomField>
    <fullName>abd_Exclude_From_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Fee</label>
    <type>Checkbox</type>
</CustomField>