force-app/main/default/objects/abd_License_Application__c/fields/abd_Length__c.field-meta.xml
<CustomField>
    <fullName>abd_Length__c</fullName>
    <formula>text(abd_License__r.abd_Length__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length</label>
    <type>Text</type>
</CustomField>