force-app/main/default/objects/abd_License_Application__c/fields/abd_License__c.field-meta.xml
<CustomField>
    <fullName>abd_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>MUSW__License2__c</referenceTo>
    <relationshipLabel>License-Applications</relationshipLabel>
    <relationshipName>License_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>