force-app/main/default/objects/abd_License_Application__c/fields/abd_License_Type__c.field-meta.xml
<CustomField>
    <fullName>abd_License_Type__c</fullName>
    <formula>text(abd_License__r.abd_License_Type__c )</formula>
    <label>License_Type</label>
    <type>Text</type>
</CustomField>