force-app/main/default/objects/abd_License_Application__c/fields/abd_Parent_License_ID__c.field-meta.xml
<CustomField>
    <fullName>abd_Parent_License_ID__c</fullName>
    <label>Parent License ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>