force-app/main/default/objects/abd_License_Application__c/fields/abd_Primary_License__c.field-meta.xml
<CustomField>
    <fullName>abd_Primary_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary License/Permit</label>
    <type>Checkbox</type>
</CustomField>