force-app/main/default/objects/abd_License_Application__c/fields/abd_Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>abd_Renewal_Status__c</fullName>
    <label>Renewal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Renew - Yes</fullName>
            </value>
            <value>
                <fullName>Renew - No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>