force-app/main/default/objects/abd_License_Application__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <formula>Text(abd_License__r.MUSW__Class__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class</label>
    <type>Text</type>
</CustomField>