force-app/main/default/objects/abd_License_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>abd_Application__c</columns>
    <columns>abd_Application_Status__c</columns>
    <columns>abd_Approval_Status__c</columns>
    <columns>abd_License_Type__c</columns>
    <columns>Class__c</columns>
    <columns>abd_Primary_License__c</columns>
    <columns>abd_License__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>